rf(auth): improved register response
- Register API response now include both token and user's creds
