# cmd/quiz/docs/swagger.json
@@ -882,8 +882,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "object",
-                                            "additionalProperties": true
+                                            "$ref": "#/definitions/app_pkg_quiz_domain_entity.AuthResponseDTO"
                                         }
                                     }
                                 }
@@ -947,7 +946,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/app_pkg_quiz_domain_entity.User"
+                                            "$ref": "#/definitions/app_pkg_quiz_domain_entity.RegisterResponseDTO"
                                         }
                                     }
                                 }
@@ -3673,6 +3672,17 @@
                 }
             }
         },
+        "app_pkg_quiz_domain_entity.AuthResponseDTO": {
+            "type": "object",
+            "properties": {
+                "creds": {
+                    "$ref": "#/definitions/app_pkg_quiz_domain_entity.User"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "app_pkg_quiz_domain_entity.LoginDTO": {
             "type": "object",
             "required": [
@@ -3794,6 +3804,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "app_pkg_quiz_domain_entity.RegisterResponseDTO": {
+            "type": "object",
+            "properties": {
+                "creds": {
+                    "$ref": "#/definitions/app_pkg_quiz_domain_entity.User"
+                },
+                "token": {
                     "type": "string"
                 }
             }
