# pkg/quiz/domain/entity/auth_dto.go
@@ -15,3 +15,12 @@ type LoginDTO struct {
 	Username string `json:"username" validate:"required"`
 	Password string `json:"password" validate:"required"`
 }
+
+// AuthResponseDTO represents the data transfer object for authentication responses
+type AuthResponseDTO struct {
+	Token string `json:"token"`
+	Creds *User  `json:"creds"`
+}
+
+// RegisterResponseDTO represents the data transfer object for registration responses
+type RegisterResponseDTO AuthResponseDTO
